# mybestpractices

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  notes.md  pyproject.toml
mybestpractices/: __init__.py  copyright.py  git_autotag.py  gitignore.py  pre-commit-hooks-django.yaml  pre-commit-hooks.yaml  project.py  required_precommit_hooks.py  structure.py  sync_npm.py  vendor_update.py
tools/: update_third_party.py
